Спринт 12, выполнено задание